--- a/style.css
+++ b/style.css
@@ -57,13 +57,21 @@ span {
   background-color: white;
 }
 
+.width-100 {
+  width: 100%;
+}
+
+.margin-5 {
+  margin: 5px;
+}
+
 input {
   border: none;
   font-size: 18px;
   flex: 1;
 }
 
-/*Pokedex List*/
+/* Pokedex List */
 #pokedex-list {
   margin-right: 350px;
   width: 100%;
@@ -144,17 +152,52 @@ input {
   font-size: 10px;
 }
 
-/*Current Pokemon*/
+/* Current Pokemon */
 #current-pokemon-container {
   width: 320px;
-  margin: 10px;
   height: 82vh;
   position: fixed;
   right: calc(10vw - 20px);
+  bottom: 0;
+  margin: 10px 10px 0 0;
   padding: 0 15px;
   text-align: center;
-  bottom: 0;
-  margin-bottom: 0;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+}
+
+.current-pokemon-stats-container {
+  display: flex;
+  background: #f6f8fc;
+  padding: 5px;
+  border-radius: 30px;
+  margin: 5px;
+}
+
+.current-pokemon-stats-container h5 {
+  margin: 6px 0;
+}
+
+.current-pokemon-stats-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  color: white;
+  font-weight: bold;
+  font-size: 10px;
+}
+
+.pokemon-info-container {
+  width: 100%;
+  background-color: #f6f8fc;
+  padding: 8px 0;
+  border-radius: 30px;
+  margin: 5px;
+}
+
+.pokemon-info-container i {
+  margin-left: 12px;
 }
