--- a/style.css
+++ b/style.css
@@ -306,3 +306,22 @@ input {
 .pokemon-info-container i {
   margin-left: 12px;
 }
+
+.selected-pokemon-evolution-sprite {
+  height: 74px;
+  width: 74px;
+  cursor: pointer;
+  border-radius: 30%;
+}
+
+.selected-pokemon-evolution-sprite:hover{
+  background-color: rgba(0, 0, 0, 0.03);
+}
+
+.selected-pokemon-evolution-level-container {
+  width: 50px;
+  background-color: #f6f8fc;
+  padding: 8px 0;
+  border-radius: 30px;
+  margin: 5px;
+}
