--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ span {
 .neighbour-sprite {
   height: 25px;
   width: 25px;
+  cursor: pointer;
+  border-radius: 30%;
 }
 
 .neighbour-sprite:after {
@@ -122,11 +124,7 @@ span {
 }
 
 .button-wrapper b {
-  font-size: 11px;
-}
-
-.button-wrapper span {
-  font-size: 11px;
+  padding: 0px 5px;
 }
 
 .left-button {
@@ -134,7 +132,10 @@ span {
   padding: 16px 6px 16px 16px;
   width: 50%;
   border: none;
-  text-align: left;
+  cursor: pointer;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 .right-button {
@@ -142,7 +143,10 @@ span {
   padding: 16px 16px 16px 6px;
   width: 50%;
   border: none;
-  text-align: right;
+  cursor: pointer;
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
 
 input {
@@ -274,7 +278,10 @@ input {
 }
 
 .selected-pokemon-weaknesses-container {
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 4px;
   justify-content: center;
   align-items: stretch;
   width: 100%;
@@ -284,19 +291,18 @@ input {
   margin: 5px;
 }
 
-.selected-pokemon-weaknesses-container::-webkit-scrollbar {
-  display: none;
-}
-
 .selected-pokemon-weakness-icon {
-  height: 8%;
-  width: 8%;
+  display: flex;
+  height: 12px;
+  width: 12px;
   border-radius: 50%;
   color: white;
   font-weight: bold;
   font-size: 10px;
   padding: 4px 4px;
   margin: 0px 1px;
+  justify-content: center;
+  align-items: center;
 }
 
 .selected-pokemon-stats-container {
