--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ h4 {
   text-align: center;
 }
 
+h4 {
+  padding-top: 10px;
+}
+
 span {
   color: #8f9396;
 }
@@ -95,6 +99,7 @@ span {
   width: 25px;
   cursor: pointer;
   border-radius: 30%;
+  padding: 0px 5px;
 }
 
 .neighbour-sprite:after {
@@ -103,7 +108,6 @@ span {
 
 .neighbour-sprite:hover {
   opacity: 0.8;
-  box-shadow: #ff53509c 3px 3px 13px;
 }
 
 .button-wrapper {
@@ -153,7 +157,7 @@ input {
   border: none;
   font-size: 18px;
   flex: 1;
-  outline: none
+  outline: none;
 }
 
 /* Pokedex List */
