Added viewport config and css for progress bar on mobile screen

--- a/style.css
+++ b/style.css
@@ -494,6 +494,12 @@ input {
 }
 
 @media (max-width: 1100px) {
+
+  .progress-bar {
+    width: 300px;
+    height: 3px;
+  }
+
   #pokedex-list {
     margin: 0;
   }
