moved loading of majority of pokemon to background, resized type fonts

--- a/style.css
+++ b/style.css
@@ -510,6 +510,10 @@ input {
     margin-left: 8px;
   }
 
+  .pokemon-type-container {
+    font-size: 8px;
+  }
+
   body {
     padding: 0 5vw;
   }
