--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@ input {
 }
 
 @media (max-width: 1100px) {
-
+  
   .progress-bar {
     width: 300px;
     height: 3px;
@@ -521,7 +521,7 @@ input {
   #selected-pokemon-container {
     z-index: 2;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(10%);
     margin: 0;
     width: calc(100% - 30px);
     display: none;
