--- a/style.css
+++ b/style.css
@@ -282,7 +282,6 @@ input {
 }
 
 .selected-pokemon-weaknesses-container {
-  /* display: flex; */
   display: grid;
   grid-template-columns: auto auto auto;
   grid-gap: 4px;
@@ -494,7 +493,6 @@ input {
 }
 
 @media (max-width: 1100px) {
-  
   .progress-bar {
     width: 300px;
     height: 3px;
@@ -510,6 +508,10 @@ input {
     margin-left: 8px;
   }
 
+  #selected-pokemon-sprite {
+    bottom: 72vh;
+  }
+
   .pokemon-type-container {
     font-size: 8px;
   }
@@ -521,10 +523,11 @@ input {
   #selected-pokemon-container {
     z-index: 2;
     left: 50%;
-    transform: translateX(-50%) translateY(10%);
+    transform: translateX(-50%);
     margin: 0;
     width: calc(100% - 30px);
     display: none;
+    height: 77vh;
   }
 
   #selected-pokemon-responsive-background {
